[package]
name = "phoenix-v1"
version = "0.2.4"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "=0.0.12"
spl-token = { version = "8", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7", features = [ "no-entrypoint" ] }
solana-program = "2.2.1"
borsh = "0.10"
bytemuck = "1.13"
lib-sokoban = "0.3.0" 
num_enum = "0.7"
itertools = "0.12"
thiserror = "1"
ellipsis-macros = "0.3.0" 
static_assertions = "=1.1.0"
solana-security-txt = "1.1.1"

[dev-dependencies]
#rand = "0.7.3"
#ellipsis-client = "0.2.1"
#tokio = { version = "1.40.0", features = ["full"] }
#solana-sdk = "2"
#phoenix-sdk = "0.4.3"
